// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PropertyContactForm Snapshots should match snapshot in loading state 1`] = `
<div
  class="bg-white p-4 rounded-md shadow-xl"
>
  <h3
    class="mb-2 text-md text-gray-700"
  >
    Contact Property Manager
  </h3>
  <form
    action="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')"
  >
    <input
      id="property"
      name="property"
      type="hidden"
      value="property-123"
    />
    <input
      id="recipient"
      name="recipient"
      type="hidden"
      value="owner-456"
    />
    <div
      class="mb-4"
    >
      <label
        class="mb-1 block text-sm text-gray-700"
        for="name"
      >
        Name
      </label>
      <input
        aria-describedby="name-error"
        class="w-full rounded-md border border-gray-300 py-2 px-3 text-sm placeholder:text-gray-500 bg-white"
        id="name"
        name="name"
        placeholder="Enter your name"
        type="text"
        value="John Doe"
      />
    </div>
    <div
      class="mb-4"
    >
      <label
        class="mb-1 block text-sm text-gray-700"
        for="email"
      >
        Email
      </label>
      <input
        aria-describedby="email-error"
        class="w-full rounded-md border border-gray-300 py-2 px-3 text-sm placeholder:text-gray-500 bg-white"
        id="email"
        name="email"
        placeholder="Enter your email"
        type="tel"
        value="john@example.com"
      />
    </div>
    <div
      class="mb-4"
    >
      <label
        class="mb-1 block text-sm text-gray-700"
        for="phone"
      >
        Phone
      </label>
      <input
        aria-describedby="phone-error"
        class="w-full rounded-md border border-gray-300 py-2 px-3 text-sm placeholder:text-gray-500 bg-white"
        id="phone"
        name="phone"
        placeholder="Enter your phone number"
        type="tel"
        value=""
      />
    </div>
    <div
      class="mb-4"
    >
      <label
        class="mb-1 block text-sm text-gray-700"
        for="body"
      >
        Message
      </label>
      <textarea
        aria-describedby="body-error"
        class="w-full rounded-md border border-gray-300 py-2 px-3 text-sm placeholder:text-gray-500 bg-white"
        id="body"
        name="body"
        placeholder="Enter your message"
        rows="4"
      />
    </div>
    <div>
      <button
        class="flex gap-1 btn btn-primary w-full justify-center hover:cursor-not-allowed"
        disabled=""
        type="submit"
      >
        <span
          class="btn-pending-icon icon-spin"
          data-testid="refresh-icon"
        />
        Send Message
      </button>
    </div>
  </form>
</div>
`;

exports[`PropertyContactForm Snapshots should match snapshot with default props 1`] = `
<div
  class="bg-white p-4 rounded-md shadow-xl"
>
  <h3
    class="mb-2 text-md text-gray-700"
  >
    Contact Property Manager
  </h3>
  <form
    action="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')"
  >
    <input
      id="property"
      name="property"
      type="hidden"
      value="property-123"
    />
    <input
      id="recipient"
      name="recipient"
      type="hidden"
      value="owner-456"
    />
    <div
      class="mb-4"
    >
      <label
        class="mb-1 block text-sm text-gray-700"
        for="name"
      >
        Name
      </label>
      <input
        aria-describedby="name-error"
        class="w-full rounded-md border border-gray-300 py-2 px-3 text-sm placeholder:text-gray-500 bg-white"
        id="name"
        name="name"
        placeholder="Enter your name"
        type="text"
        value="John Doe"
      />
    </div>
    <div
      class="mb-4"
    >
      <label
        class="mb-1 block text-sm text-gray-700"
        for="email"
      >
        Email
      </label>
      <input
        aria-describedby="email-error"
        class="w-full rounded-md border border-gray-300 py-2 px-3 text-sm placeholder:text-gray-500 bg-white"
        id="email"
        name="email"
        placeholder="Enter your email"
        type="tel"
        value="john@example.com"
      />
    </div>
    <div
      class="mb-4"
    >
      <label
        class="mb-1 block text-sm text-gray-700"
        for="phone"
      >
        Phone
      </label>
      <input
        aria-describedby="phone-error"
        class="w-full rounded-md border border-gray-300 py-2 px-3 text-sm placeholder:text-gray-500 bg-white"
        id="phone"
        name="phone"
        placeholder="Enter your phone number"
        type="tel"
        value=""
      />
    </div>
    <div
      class="mb-4"
    >
      <label
        class="mb-1 block text-sm text-gray-700"
        for="body"
      >
        Message
      </label>
      <textarea
        aria-describedby="body-error"
        class="w-full rounded-md border border-gray-300 py-2 px-3 text-sm placeholder:text-gray-500 bg-white"
        id="body"
        name="body"
        placeholder="Enter your message"
        rows="4"
      />
    </div>
    <div>
      <button
        class="flex gap-1 btn btn-primary w-full justify-center hover:cursor-pointer"
        type="submit"
      >
        <span
          class="mr-2"
          data-testid="paper-plane-icon"
        />
        Send Message
      </button>
    </div>
  </form>
</div>
`;

exports[`PropertyContactForm Snapshots should match snapshot with different property data 1`] = `
<div
  class="bg-white p-4 rounded-md shadow-xl"
>
  <h3
    class="mb-2 text-md text-gray-700"
  >
    Contact Property Manager
  </h3>
  <form
    action="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')"
  >
    <input
      id="property"
      name="property"
      type="hidden"
      value="custom-property-123"
    />
    <input
      id="recipient"
      name="recipient"
      type="hidden"
      value="custom-owner-456"
    />
    <div
      class="mb-4"
    >
      <label
        class="mb-1 block text-sm text-gray-700"
        for="name"
      >
        Name
      </label>
      <input
        aria-describedby="name-error"
        class="w-full rounded-md border border-gray-300 py-2 px-3 text-sm placeholder:text-gray-500 bg-white"
        id="name"
        name="name"
        placeholder="Enter your name"
        type="text"
        value="Jane Smith"
      />
    </div>
    <div
      class="mb-4"
    >
      <label
        class="mb-1 block text-sm text-gray-700"
        for="email"
      >
        Email
      </label>
      <input
        aria-describedby="email-error"
        class="w-full rounded-md border border-gray-300 py-2 px-3 text-sm placeholder:text-gray-500 bg-white"
        id="email"
        name="email"
        placeholder="Enter your email"
        type="tel"
        value="jane@example.com"
      />
    </div>
    <div
      class="mb-4"
    >
      <label
        class="mb-1 block text-sm text-gray-700"
        for="phone"
      >
        Phone
      </label>
      <input
        aria-describedby="phone-error"
        class="w-full rounded-md border border-gray-300 py-2 px-3 text-sm placeholder:text-gray-500 bg-white"
        id="phone"
        name="phone"
        placeholder="Enter your phone number"
        type="tel"
        value=""
      />
    </div>
    <div
      class="mb-4"
    >
      <label
        class="mb-1 block text-sm text-gray-700"
        for="body"
      >
        Message
      </label>
      <textarea
        aria-describedby="body-error"
        class="w-full rounded-md border border-gray-300 py-2 px-3 text-sm placeholder:text-gray-500 bg-white"
        id="body"
        name="body"
        placeholder="Enter your message"
        rows="4"
      />
    </div>
    <div>
      <button
        class="flex gap-1 btn btn-primary w-full justify-center hover:cursor-pointer"
        type="submit"
      >
        <span
          class="mr-2"
          data-testid="paper-plane-icon"
        />
        Send Message
      </button>
    </div>
  </form>
</div>
`;

exports[`PropertyContactForm Snapshots should match snapshot with form errors 1`] = `
<div
  class="bg-white p-4 rounded-md shadow-xl"
>
  <h3
    class="mb-2 text-md text-gray-700"
  >
    Contact Property Manager
  </h3>
  <form
    action="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')"
  >
    <input
      id="property"
      name="property"
      type="hidden"
      value="property-123"
    />
    <input
      id="recipient"
      name="recipient"
      type="hidden"
      value="owner-456"
    />
    <div
      class="mb-4"
    >
      <label
        class="mb-1 block text-sm text-gray-700"
        for="name"
      >
        Name
      </label>
      <input
        aria-describedby="name-error"
        class="w-full rounded-md border border-gray-300 py-2 px-3 text-sm placeholder:text-gray-500 bg-white"
        id="name"
        name="name"
        placeholder="Enter your name"
        type="text"
        value="John Doe"
      />
      <div
        aria-atomic="true"
        aria-live="polite"
        id="name-error"
      >
        <p
          class="mt-1 text-sm text-red-500"
        >
          Name is required
        </p>
      </div>
    </div>
    <div
      class="mb-4"
    >
      <label
        class="mb-1 block text-sm text-gray-700"
        for="email"
      >
        Email
      </label>
      <input
        aria-describedby="email-error"
        class="w-full rounded-md border border-gray-300 py-2 px-3 text-sm placeholder:text-gray-500 bg-white"
        id="email"
        name="email"
        placeholder="Enter your email"
        type="tel"
        value="john@example.com"
      />
      <div
        aria-atomic="true"
        aria-live="polite"
        id="email-error"
      >
        <p
          class="mt-1 text-sm text-red-500"
        >
          Invalid email format
        </p>
      </div>
    </div>
    <div
      class="mb-4"
    >
      <label
        class="mb-1 block text-sm text-gray-700"
        for="phone"
      >
        Phone
      </label>
      <input
        aria-describedby="phone-error"
        class="w-full rounded-md border border-gray-300 py-2 px-3 text-sm placeholder:text-gray-500 bg-white"
        id="phone"
        name="phone"
        placeholder="Enter your phone number"
        type="tel"
        value=""
      />
    </div>
    <div
      class="mb-4"
    >
      <label
        class="mb-1 block text-sm text-gray-700"
        for="body"
      >
        Message
      </label>
      <textarea
        aria-describedby="body-error"
        class="w-full rounded-md border border-gray-300 py-2 px-3 text-sm placeholder:text-gray-500 bg-white"
        id="body"
        name="body"
        placeholder="Enter your message"
        rows="4"
      />
    </div>
    <div
      data-testid="input-errors-undefined"
    />
    <div>
      <button
        class="flex gap-1 btn btn-primary w-full justify-center hover:cursor-pointer"
        type="submit"
      >
        <span
          class="mr-2"
          data-testid="paper-plane-icon"
        />
        Send Message
      </button>
    </div>
  </form>
</div>
`;

exports[`PropertyContactForm Snapshots should match snapshot with minimal user data 1`] = `
<div
  class="bg-white p-4 rounded-md shadow-xl"
>
  <h3
    class="mb-2 text-md text-gray-700"
  >
    Contact Property Manager
  </h3>
  <form
    action="javascript:throw new Error('A React form was unexpectedly submitted. If you called form.submit() manually, consider using form.requestSubmit() instead. If you\\'re trying to use event.stopPropagation() in a submit event handler, consider also calling event.preventDefault().')"
  >
    <input
      id="property"
      name="property"
      type="hidden"
      value="property-123"
    />
    <input
      id="recipient"
      name="recipient"
      type="hidden"
      value="owner-456"
    />
    <div
      class="mb-4"
    >
      <label
        class="mb-1 block text-sm text-gray-700"
        for="name"
      >
        Name
      </label>
      <input
        aria-describedby="name-error"
        class="w-full rounded-md border border-gray-300 py-2 px-3 text-sm placeholder:text-gray-500 bg-white"
        id="name"
        name="name"
        placeholder="Enter your name"
        type="text"
        value=""
      />
    </div>
    <div
      class="mb-4"
    >
      <label
        class="mb-1 block text-sm text-gray-700"
        for="email"
      >
        Email
      </label>
      <input
        aria-describedby="email-error"
        class="w-full rounded-md border border-gray-300 py-2 px-3 text-sm placeholder:text-gray-500 bg-white"
        id="email"
        name="email"
        placeholder="Enter your email"
        type="tel"
        value=""
      />
    </div>
    <div
      class="mb-4"
    >
      <label
        class="mb-1 block text-sm text-gray-700"
        for="phone"
      >
        Phone
      </label>
      <input
        aria-describedby="phone-error"
        class="w-full rounded-md border border-gray-300 py-2 px-3 text-sm placeholder:text-gray-500 bg-white"
        id="phone"
        name="phone"
        placeholder="Enter your phone number"
        type="tel"
        value=""
      />
    </div>
    <div
      class="mb-4"
    >
      <label
        class="mb-1 block text-sm text-gray-700"
        for="body"
      >
        Message
      </label>
      <textarea
        aria-describedby="body-error"
        class="w-full rounded-md border border-gray-300 py-2 px-3 text-sm placeholder:text-gray-500 bg-white"
        id="body"
        name="body"
        placeholder="Enter your message"
        rows="4"
      />
    </div>
    <div>
      <button
        class="flex gap-1 btn btn-primary w-full justify-center hover:cursor-pointer"
        type="submit"
      >
        <span
          class="mr-2"
          data-testid="paper-plane-icon"
        />
        Send Message
      </button>
    </div>
  </form>
</div>
`;
